Adding calendar functionability

--- a/google-test/Views/Home/DeleteEvent.cshtml
+++ b/google-test/Views/Home/DeleteEvent.cshtml
@@ -7,7 +7,7 @@
 <h2>DeleteEvent</h2>
 <form method="post">
     <input type="text" name="calendarId" placeholder="primary" />
-    <input type="text" name="eventId" placeholder="Go to cinema" />
+    <input type="text" name="eventSummary" placeholder="Go to cinema" />
     <button type="submit">Delete</button>
 </form>
 
