--- a/google-test/Views/Home/IndexAsync.cshtml
+++ b/google-test/Views/Home/IndexAsync.cshtml
@@ -1,13 +1,10 @@
-﻿@model Google.Apis.Calendar.v3.Data.Events
+﻿@model Google.Apis.Calendar.v3.Data.CalendarList
 @{
     ViewBag.Title = "Calendar";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Eventos próximos</h2>
-<ul>
-    @foreach (var e in Model.Items)
-    {
-        <li>@e.Summary, @e.Id, @e.Start.DateTime.ToString()</li>
-    }
-</ul>
+@Html.DropDownListFor(x => x.Items, (IEnumerable<SelectListItem>)ViewBag.Options)
+
+<br />
