Add calendar and events, delete calendars and events, view differents calendars and it's events

--- a/google-test/Views/Home/AddEvent.cshtml
+++ b/google-test/Views/Home/AddEvent.cshtml
@@ -5,13 +5,13 @@
 
 <h2>AddEvent</h2>
 <form method="POST">
+    Calendar: <input type="text" name="Calendar" />
+    <br />
     Summary: <input type="text" name="Summary" />
-             <br />
+    <br />
     Start: <input type="datetime" name="Start" />
-           <br />
+    <br />
     End: <input type="datetime" name="End" />
-         <br />
-    Location <input type="text" name="Location" />
-             <br />
+    <br />
     <button type="submit">Add</button>
 </form>
