--- a/google-test/Views/Home/AddCalendar.cshtml
+++ b/google-test/Views/Home/AddCalendar.cshtml
@@ -8,5 +8,6 @@
 <form method="post">
     <input type="text" name="Summary" placeholder="Albor" />
     <input type="text" name="Description" placeholder="Albor events" />
+    <input type="text" name="Location" placeholder="Mar del Plata" />
     <button type="submit">Add</button>
 </form>
