--- a/google-test/Views/Home/DeleteEvent.cshtml
+++ b/google-test/Views/Home/DeleteEvent.cshtml
@@ -6,7 +6,7 @@
 
 <h2>DeleteEvent</h2>
 <form method="post">
-    <input type="text" name="calendarId" placeholder="primary" />
+    <input type="text" name="calendarSummary" placeholder="primary" />
     <input type="text" name="eventSummary" placeholder="Go to cinema" />
     <button type="submit">Delete</button>
 </form>
